@@ -190,6 +190,8 @@ static gint     gtk_tree_view_focus                (GtkWidget        *widget,
 static void     gtk_tree_view_grab_focus           (GtkWidget        *widget);
 static void     gtk_tree_view_style_set            (GtkWidget        *widget,
 						    GtkStyle         *previous_style);
+static void     gtk_tree_view_grab_notify          (GtkWidget        *widget,
+						    gboolean          was_grabbed);
 
 /* container signals */
 static void     gtk_tree_view_remove               (GtkContainer     *container,
@@ -531,6 +533,7 @@ gtk_tree_view_class_init (GtkTreeViewClass *class)
   widget_class->focus = gtk_tree_view_focus;
   widget_class->grab_focus = gtk_tree_view_grab_focus;
   widget_class->style_set = gtk_tree_view_style_set;
+  widget_class->grab_notify = gtk_tree_view_grab_notify;
 
   /* GtkContainer signals */
   container_class->remove = gtk_tree_view_remove;
@@ -12998,4 +13001,13 @@ gtk_tree_view_set_row_separator_func (GtkTreeView                *tree_view,
 }
 
   
+static void
+gtk_tree_view_grab_notify (GtkWidget *widget,
+			   gboolean   was_grabbed)
+{
+  GtkTreeView *tree_view = GTK_TREE_VIEW (widget);
+
+  if (!was_grabbed)
+    tree_view->priv->pressed_button = -1;
+}
 
